# Tennis_Data_Analytics

./: README.md  Tennis_db_creation.sql  pyproject.toml  requirements.txt
.virtual_documents/notebooks/: API_with_Flask.ipynb  Flask_UI.ipynb  Flask_UI_with_save.ipynb  Nationality_Performance.ipynb  Tennis_Data_Visualization.ipynb  Untitled.ipynb  tennis_app.py.ipynb
data/: atp_combined_dataset.csv  atp_matches_2022.csv  atp_matches_2023.csv  atp_matches_2024.csv  atp_matches_combined_cleaned.csv  atp_players_concat_cleaned.csv
figures/MySQL/: AVG_Rank_Players_Tournament.sql  Age_Distribution_Winners.sql  Age_Distribution_losers.sql  Age_Distribution_of_Winners.csv  Age_Distribution_of_Winners.txt  EER_Diagram.mwb  EER_Diagram.mwb.bak  Most_Success_Players_in_Grand_Slams.sql  Players_with_largest_improvement_in_ranking.sql  Tennis_db_creation.sql  Top_Rank_Players_by_ioc.sql
figures/Tableau/: Tennis_Data_Analytics.twb
notebooks/: Nationality_Performance.ipynb  Tennis_Data_Visualization.ipynb  atp_rankings_current_cleaned.csv
notebooks/.ipynb_checkpoints/: API_with_Flask-checkpoint.ipynb  Flask_UI-checkpoint.ipynb  Flask_UI_with_save-checkpoint.ipynb  Nationality_Performance-checkpoint.ipynb  Tennis_Data_Visualization-checkpoint.ipynb  atp_matches_combined_cleaned-checkpoint.csv  atp_players_concat_name-checkpoint.csv  atp_players_concatenated-checkpoint.csv  tennis_app.py-checkpoint.ipynb
src/tennis_data_analytics/: __init__.py
